<resources>
    <string name="app_name" translatable="false">StatiBud</string>

    <string name="current_position">%d</string>

    <string name="try_again">TRY AGAIN</string>

    <!--bottom menu-->
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="top">Top</string>
    <string name="reco">Recommendations</string>

    <string name="datastate_error">Error ! Cause: %s</string>

    <!--Login Fragment-->
    <string name="button_login">LOGIN WITH</string>
    <string name="please_wait">PLEASE WAIT</string>
    <string name="token_success" formatted="false">Success! Token expires in %s seconds.</string>
    <string name="token_fail" formatted="false">Token could not get! Cause: %s</string>

    <string name="auth_response_error" formatted="false">Error on getting auth response. Try again !</string>
    <string name="auth_denied" formatted="false">Error. Auth denied ! Cause: %s</string>

    <!--Login Activity-->
    <string name="spotibud_header" translatable="false">StatiBud</string>
    <string name="spotibud_des" translatable="false">No.1 tool for Spotify</string>
    <string name="button_start">LOGIN WITH SPOTIFY</string>
    <string name="button_clicked">PLEASE WAIT</string>
    <string name="button_response">LOADING…</string>
    <string name="version" translatable="false">version 0.9</string>
    <string name="bottom_dev_name" translatable="false">uhi5d | 2021</string>

    <!--Top Fragment-->
    <string name="top_header">Your Most Listened</string>
    <string name="top_short_term">4 weeks</string>
    <string name="top_mid_term">6 months</string>
    <string name="top_long_term">lifetime</string>

    <!--Profile Fragment-->
    <string name="welcome_header">Welcome, %s</string>
    <string name="id">ID:</string>
    <string name="display_name">Display Name:</string>
    <string name="email">Email:</string>
    <string name="followers">Followers:</string>
    <string name="country">Country:</string>
    <string name="account_status">Account Status:</string>

    <string name="account_info">Account Info</string>
    <string name="available_devices">Available Devices</string>

    <!--Home Fragment-->
    <string name="show_more">SHOW MORE</string>
    <string name="show_less">SHOW LESS</string>
    <string name="recommendations">Recommendations for you</string>
    <string name="recommendations_description">According to your last activities</string>
    <string name="home_tf">Songs You Have Found Using TrackFinder Before</string>
    <string name="home_tf_not_found">List is empty. Go TrackFinder to find some tracks.</string>
    <string name="recent_tracks">Recent Tracks</string>
    <string name="share_header">Prepared For You</string>
    <string name="share_header_description">Share with your friends !</string>

    <string name="trackfinder_warn">No TrackFinder log found.</string>
    <string name="go_to_trackfinder">Go TrackFinder to find a song</string>
    <string name="clear_list">CLEAR LIST</string>


    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--Search Fragment-->
    <string name="tv_searchHistory">Search History</string>
    <string name="tv_history_text">Your search history appears here</string>
    <string name="tv_artists">Artists</string>
    <string name="tv_tracks">Tracks</string>
    <string name="tv_albums">Albums</string>
    <string name="hint">Search something…</string>
    <string name="tv_artists_more">Show all artists</string>
    <string name="tv_tracks_more">Show all tracks</string>
    <string name="tv_albums_more">Show all albums</string>

    <string name="artist_header">Artists</string>
    <string name="track_header">Tracks</string>
    <string name="album_header">Albums</string>

    <!--Detailed Search Fragment-->
    <string name="detailed_search_header">\"%1$s\" in %2$s</string>


    <!--time ranges-->
    <string name="short_term">4 weeks</string>
    <string name="mid_term">6 months</string>
    <string name="long_term">lifetime</string>

    <!--top radio buttons-->
    <string name="top_fragment_artists">ARTISTS</string>
    <string name="top_fragment_tracks">TRACKS</string>

    <!--RECOMMENDATION-->
    <string name="reco_selected_track">Track not selected</string>
    <string name="reco_selected_artist">Click to select</string>

    <string name="search_result_empty">No results found !</string>
    <string name="search_result_fail">Error ! </string>

    <string name="popularity">Popularity :</string>

    <string name="tr_find_button_error">Empty field detected! You have to choose track and genres</string>


    <!--dialog texts-->
    <string name="dialog_text">Are you sure you want to exit?</string>
    <string name="dialog_accept">Yes</string>
    <string name="dialog_deny">No</string>

    <string name="connection_text">Internet connection not found. Please connect to a network to continue using the application.</string>
    <string name="connection_negative">Exit App</string>

    <!--Item Detailed Fragment-->
    <string name="artist_profile">PROFILE</string>
    <string name="artist_similar">SIMILAR ARTISTS</string>

    <!--Detailed Artist Profile Fragment-->
    <string name="top_tracks">Top Tracks</string>
    <string name="albums">Albums</string>
    <string name="similar_artists">Similar Artists</string>

    <!--Detailed Track Fragment-->
    <string name="dt_info_header">About this track</string>
    <string name="dt_more_artists_header">Contributing Artists</string>
    <string name="dt_audio_features_header">Audio Features</string>
    <string name="dt_rating_header">Popularity</string>
    <string name="album">Album</string>
    <string name="duration">duration</string>
    <string name="tempo">tempo</string>
    <string name="key">key</string>

    <string name="danceability">Danceability</string>
    <string name="energy">Energy</string>
    <string name="loudness">Loudness</string>
    <string name="speechiness">Speechiness</string>
    <string name="acousticness">Acousticness</string>
    <string name="instrumentalness">Instrumentalness</string>
    <string name="liveness">Liveness</string>
    <string name="valence">Valence</string>

    <!--Detailed Track Fragment-->
    <string name="track_name">Track Name</string>
    <string name="album_explicit">Explicit</string>
    <string name="profile_header">Profile</string>
    <string name="recent_header">Recent</string>

    <string name="link_format">More %s</string>

    <!--Type Strings-->
    <string name="type_artist">artist</string>
    <string name="type_track">track</string>
    <string name="type_album">album</string>
    <string name="tv_historyText">Search history shown here</string>

    <!--ShareOneLayout-->
    <string name="share_one_header">My #1 in past 4 weeks</string>
    <string name="share_two_header">My #2 in past 4 weeks</string>
    <string name="share_three_header">My Top 3 in past 4 weeks</string>
    <string name="share_four_header">My Top 3 in past 4 weeks</string>
    <string name="spotibud">Spotibud for Android</string>

    <!--TrackFinder Fragment-->
    <string name="search_hint">Pick a song</string>
    <string name="button_text">FIND SONGS</string>
    <string name="warn">No song selected</string>
    <string name="button_error">Song or genre did not selected. Please check parameters and try again.</string>
    <string name="tf_click">Select Song</string>

    <string name="warn_genre">No genre selected</string>
    <string name="tf_genre_click">Select Genre</string>

    <string name="song_found">Track Found !</string>
    <string name="ft_go_to_song">Go to song</string>
    <string name="ft_cancel">Cancel</string>
    <string name="ft_refresh">Refresh</string>

    <string name="tf_select_song">Select Song</string>
    <string name="ft_select_genre">Select Genre</string>

    <!--help dialog-->
    <string name="help_about">About TrackFinder</string>
    <string name="help_what_is">What is TrackFinder ?</string>
    <string name="help_what_is_text1">TrackFinder is a tool that allows you to find the song you are looking for.</string>
    <string name="help_how_to">How to Use TrackFinder ?</string>
    <string name="help_how_to_text1">" 1) Press the \"Select Song\" button. In the window that opens, search for the song you want to be a reference."</string>
    <string name="help_how_to_text2"> 2) Press the "Select Genre" button. In the window that opens, search for the genre you want to be a reference.</string>
    <string name="help_how_to_text3"> 3) Set features using bars.</string>
    <string name="help_how_to_text4">" 4) Press \"FIND SONG\" and enjoy your results :)"</string>
    <string name="help_got_it">Got It!</string>

    <!--track search-->
    <string name="track_search_header">Search Song</string>
    <string name="track_search_et_hint">Write something…</string>
    <string name="track_search_hide_keyboard">Hıde Keyboard</string>
    <string name="track_search_cancel">Cancel</string>

    <!--genre search-->
    <string name="genre_search_header">Search Genre</string>
    <string name="genre_search_et_hint">Write something…</string>
    <string name="genre_search_hide_keyboard">Hide Keyboard</string>
    <string name="genre_search_cancel">Cancel</string>


    <string name="song_not_found">No song found matching your preferences. Please change preferences and try again.</string>

    <string name="selected_song">Selected Track:</string>
    <string name="selected_genre">Selected Genre:</string>
    <string name="search_for_a_genre">Search for a genre..</string>
    <string name="reco_header">Recommendations</string>
    <string name="track_not_selected">Track not selected</string>
    <string name="click_to_select">Click to select</string>
    <string name="genre_list_warn">You can choose maximum 4 types!</string>
    <string name="reco_songs_found">Tracks Found!</string>


</resources>