<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArtistsFragment">
   <RadioGroup
       android:layout_width="match_parent"
       android:layout_height="30dp"
       android:id="@+id/radioGroup"
       android:weightSum="12"
       android:gravity="center_vertical"
       android:orientation="horizontal"
       android:background="@color/colorPrimaryDark">
       <RadioButton
           android:layout_width="0dp"
           android:layout_height="30dp"
           android:id="@+id/radioButton1"
           android:layout_weight="4"
           android:text="@string/short_term"
           android:gravity="center"
           android:background="@drawable/radio_flat_selector"
           android:button="@android:color/transparent"
           android:checked="true"
           android:textColor="@color/radio_flat_text_selector"/>
       <RadioButton
           android:layout_width="0dp"
           android:layout_height="50dp"
           android:id="@+id/radioButton2"
           android:gravity="center"
           android:layout_weight="4"
           android:text="@string/mid_term"
           android:background="@drawable/radio_flat_selector"
           android:button="@android:color/transparent"
           android:textColor="@color/radio_flat_text_selector"/>
       <RadioButton
           android:layout_width="0dp"
           android:layout_height="50dp"
           android:id="@+id/radioButton3"
           android:layout_weight="4"
           android:gravity="center"
           android:text="@string/long_term"
           android:background="@drawable/radio_flat_selector"
           android:button="@android:color/transparent"
           android:textColor="@color/radio_flat_text_selector"/>

   </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerArtists"
        tools:listitem="@layout/single_artist_layout"
        android:layout_below="@+id/radioGroup"/>

</RelativeLayout>