<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TracksFragment">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/radioGroupTracks"
        android:weightSum="12"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/radioButton1Tracks"
            android:layout_weight="4"
            android:text="@string/short_term"
            android:gravity="center"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:textColor="@color/radio_flat_text_selector"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/radioButton2Tracks"
            android:gravity="center"
            android:layout_weight="4"
            android:text="@string/mid_term"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:textColor="@color/radio_flat_text_selector"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/radioButton3Tracks"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/long_term"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:textColor="@color/radio_flat_text_selector"/>

    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerTracks"
        tools:listitem="@layout/single_track_layout"
        android:layout_below="@+id/radioGroupTracks"/>

</RelativeLayout>